Sat Dec 20 16:31:46 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/,docs/quartzdesign.html: Removed all the quartz
	  lexicon code and docs.  It's been disabled for ages, and we've
	  not missed it.

Sat Dec 20 01:21:47 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.h: Added doxygen comments for the
	  QuartzWritableDatabase members we use to buffer changes.

Sat Dec 20 01:19:10 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.cc: Trigger autoflush on
	  totlen_added + totlen_removed rather than specially tracking the
	  number of document add/delete/replace operations.

Fri Dec 19 22:51:26 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/: Buffer up changes to the postlists and apply them
	  all at once (at present they're applied inefficiently, but this is
	  change enables us to apply them with an efficient merge).
	* tests/api_db.cc,tests/quartztest.cc: Added a couple of tests, and
	  commented out some test lines which fail in debug builds.

Sun Dec 14 03:38:55 GMT 2003  Olly Betts <olly@survex.com>

	* common/omdebug.cc: Open debug log with flag O_WRONLY so that we can
	  actually write to it!
 
Mon Dec 08 01:53:24 GMT 2003  Olly Betts <olly@survex.com>

	* HACKING: Update to mention that building from CVS requires 
	  ./configure --enable-maintainer-mode (or use bootstrap).

Mon Dec 01 19:03:00 GMT 2003  Olly Betts <olly@survex.com>

	* configure.in: Fixed the "fixed" valgrind test.

Sun Nov 30 23:42:52 GMT 2003  Olly Betts <olly@survex.com>

	* configure.in,testsuite/testsuite.cc: Fix test for valgrind - it
	  wasn't working correctly when valgrind was installed but was too
	  a version to support VALGRIND_COUNT_ERRORS and VALGRIND_COUNT_LEAKS.

Wed Nov 26 16:31:19 GMT 2003  Olly Betts <olly@survex.com>

	* Makefile.am,extra/Makefile.am: Updated libtool -version-info
	  parameters for 0.7.5.

Wed Nov 26 15:32:45 GMT 2003  Olly Betts <olly@survex.com>
