@@ -1,3 +1,8 @@
+Sat Dec 20 22:11:26 GMT 2003  Olly Betts <olly@survex.com>
+
+	* backends/quartz/: Removed several needless inclusions of
+	  quartz_table_entries.h.
+
 Sat Dec 20 16:31:46 GMT 2003  Olly Betts <olly@survex.com>
 
 	* backends/quartz/,docs/quartzdesign.html: Removed all the quartz
